arrow alignment fix

--- a/public/style.css
+++ b/public/style.css
@@ -209,7 +209,7 @@ CAROUSEL
   /* background-color: rgba(255, 255, 255, 0.7); */
   display: inline-block;
   height: 500px;
-  width: 800px;
+  width: 830px;
   margin-top: -50px;
   /* width: 70%;
   border: 2px solid rgba(255, 255, 100, 0.6);
